force-app/main/default/objects/RSO_PE__e/RSO_PE__e.object-meta.xml
<CustomObject>
    <label>RSO PE</label>
    <pluralLabel>RSO PE</pluralLabel>
</CustomObject>