force-app/main/default/objects/RSO_PE__e/fields/Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_Id__c</fullName>
    <label>Resource Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>