force-app/main/default/objects/RSO_PE__e/fields/Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Policy__c</fullName>
    <label>Scheduling Policy</label>
    <length>64</length>
    <type>Text</type>
</CustomField>